# thejoen_python_basic

./: .gitignore  data_set.py  day03_random.py  day04_05.py  day04_4.py  day_01.py  day_02.py  day_02_stock.py  day_03.py  day_04.py  day_04_2.py  day_04_3.py  day_06.py  day_06_2.py  day_06_2t.py  day_06_3.py  day_06_3t.py  day_06_4.py  day_06t.py  environment.yml  environment2.yml  pyproject.toml  requirements.txt  target_dates.txt  target_ma.txt
fastapi-board-frontend/: board-app.py
fastapi_board/: bulletin_board.db  create_db.py  crud.py  database.py  main.py  models.py  schemas.py
fastapi_board_2/: bulletin_board.db  create_db.py  crud.py  database.py  main.py  models.py  schemas.py
function_cal/: day_03_function.py
python_stock/: part_A.py
streamlit2/: pyproject.toml
streamlit2/streamlit2/: resume_app.py  resume_app2.py  streamlit01.py  streamlit02.py  streamlit03.py  streamlit04.py  style.css  thejoen_python_basic.code-workspace
streamlit2/streamlit2/assets/: 01_sections.json  02_header.json  03_social_media.json  04_skills.json  09_public_speaking.json
streamlit2/streamlit2/styles/: main.css
