[tool.poetry]
name = "thejoen-python-basic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.41.1"
numpy = "^2.2.1"
requests = "^2.32.3"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
mysqlclient = "^2.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
