[tool.poetry]
name = "streamlit2"
version = "0.1.0"
description = ""
authors = ["sungwoo <swpheus1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
streamlit = "^1.41.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
